# axa-fr-splitter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.in  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: python-publish.yml  tests.yml
src/axa_fr_splitter/: __init__.py  eml_handler.py  extension_handler_interface.py  file.py  file_handler.py  image.py  image_handler.py  magic_mime_reader.py  mime_reader.py  mime_reader_interface.py  pdf_handler.py  tiff_handler.py
src/splitter/: __init__.py  eml_handler.py  errors.py  extension_handler_interface.py  file.py  file_handler.py  image_handler.py  interfaces.py  langchain.py  magic_mime_reader.py  mime_reader.py  pdf_handler.py  tiff_handler.py
src/splitter/eml/: eml_handler.py
src/splitter/image/: image.py  image_handler.py  tiff_handler.py
src/splitter/mime_reader/: __init__.py  magic_mime_reader.py  mime_reader.py  mime_reader_interface.py
src/splitter/pdf/: pdf_handler.py
src/tests/: test_eml_converters.py  test_image_converters.py  test_pdf_converters.py  test_tiff_converters.py
src/tests/inputs/: .gitattributes  demo.eml  specimen.tiff
tests/: test_eml_converters.py  test_image_converters.py  test_langchain_adapter.py  test_passthrough_converters.py  test_pdf_converters.py  test_tiff_converters.py
tests/inputs/: .gitattributes  demo.eml
